update script tags

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
    		input, textarea  { -webkit-user-select:text; }
   </style>
   <script src="intelxdk.js"></script>
+  <script src='cordova.js'></script> 
+  <script src='xhr.js'></script>
   <!--
       Include xhr.js in your index.html when using web services that make cross origin requests
       This file makes those requests successfully when testing your apps under the "EMULATE", "BUILD" & "TEST" tab with the 
